Adiciona novos arquivos HTML para as seções de comprovante, finalização, validação e energia, além de atualizar caminhos de scripts e ícones para garantir o carregamento correto. Inclui também novos arquivos de estilo e imagens necessárias para a interface.

--- a/acesso/index.html
+++ b/acesso/index.html
@@ -156,7 +156,7 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- User Data Manager -->
-    <script src="../js/user-data-manager.js"></script>
+    <script src="/js/user-data-manager.js"></script>
     <title>Portal Gov - Luz Acessível para Todos</title>
 
     <style>
