--- a/chavepix/index.html
+++ b/chavepix/index.html
@@ -131,7 +131,7 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- User Data Manager -->
-    <script src="../../js/user-data-manager.js"></script>
+    <script src="/js/user-data-manager.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -148,7 +148,7 @@
     </script>
 
     <!-- Remix Icons -->
-    <link href="../css/remixicon.css" rel="stylesheet">
+    <link href="/css/remixicon.css" rel="stylesheet">
 
     <style>
       /* Animation for fade-in */
