--- a/comprovante/comprovante.html
+++ b/comprovante/comprovante.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com">
   </script>
   <!-- User Data Manager -->
-  <script src="../../js/user-data-manager.js"></script>
+  <script src="/js/user-data-manager.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&amp;display=swap" rel="stylesheet"/>
   <style>
    body {
