--- a/comprovante/index.html
+++ b/comprovante/index.html
@@ -6,9 +6,9 @@
     <title>Comprovante de Recebimento - Gov.br</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- User Data Manager -->
-    <script src="../../js/user-data-manager.js"></script>
-    <script src="../../js/utmify-config.js"></script>
-    <script src="../../js/utmify-setup.js"></script>
+    <script src="/js/user-data-manager.js"></script>
+    <script src="/js/utmify-config.js"></script>
+    <script src="/js/utmify-setup.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Canal_Gov_Logo.png/960px-Canal_Gov_Logo.png" type="image/png">
     
