--- a/finalizacao/index.html
+++ b/finalizacao/index.html
@@ -6,11 +6,11 @@
     <title>Finalização do Processo - Gov.br</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- User Data Manager -->
-    <script src="../../js/user-data-manager.js"></script>
-    <script src="../../js/utmify-config.js"></script>
-    <script src="../../js/utmify-setup.js"></script>
+    <script src="/js/user-data-manager.js"></script>
+    <script src="/js/utmify-config.js"></script>
+    <script src="/js/utmify-setup.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" href="../../../images/Gov.br_logo.svg.png" type="image/png">
+    <link rel="icon" href="/../images/Gov.br_logo.svg.png" type="image/png">
     
     <style>
       .gov-green { background-color: #168821; }
